--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -1,11 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainFragment">
-    <Button
-            android:text="Play"
-            android:layout_width="318dp"
-            android:layout_height="wrap_content" android:id="@+id/playButton"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:gravity="center">
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" tools:src="@tools:sample/avatars" android:id="@+id/imageView"
+                app:srcCompat="@mipmap/ic_launcher"/>
+        <TextView
+                android:text="Tic Tac Toe"
+                android:layout_width="match_parent"
+                android:layout_height="53dp" android:id="@+id/textView" android:textStyle="bold"
+                android:textSize="28sp" android:textAlignment="center" android:textColor="@android:color/black"/>
+        <Button
+                android:text="Play"
+                android:layout_width="match_parent"
+                android:layout_height="113dp" android:id="@+id/playButton"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+        <Button
+                android:text="Leaderboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/playButton2"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+        <Button
+                android:text="Rules(?)"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/playButton3"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+    </LinearLayout>
 </FrameLayout>
