--- a/TicTacToe/app/src/main/res/layout/fragment_start.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_start.xml
@@ -14,7 +14,7 @@
                 android:inputType="textPersonName"
                 android:text="Name"
                 android:ems="10"
-                android:id="@+id/editText"/>
+                android:id="@+id/playerTextField"/>
         <Button
                 android:text="Start"
                 android:layout_width="match_parent"
