--- a/TicTacToe/app/src/main/res/navigation/nav_graph.xml
+++ b/TicTacToe/app/src/main/res/navigation/nav_graph.xml
@@ -5,7 +5,10 @@
             app:startDestination="@id/mainFragment">
     <fragment android:id="@+id/mainFragment" android:name="no.jahnsrud.tictactoe.MainFragment"
               android:label="fragment_main" tools:layout="@layout/fragment_main">
-        <action android:id="@+id/action_mainFragment_to_startFragment" app:destination="@id/startFragment"/>
+        <action android:id="@+id/action_mainFragment_to_startFragment"
+                app:destination="@+id/startFragment"
+                app:enterAnim="@anim/slide_in_right"
+                app:popExitAnim="@anim/slide_in_left"/>
     </fragment>
     <fragment android:id="@+id/gameFragment" android:name="no.jahnsrud.tictactoe.GameFragment"
               android:label="fragment_game" tools:layout="@layout/fragment_game"/>
