--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -5,20 +5,37 @@
              android:layout_height="match_parent"
              tools:context=".GameFragment">
     <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content" android:gravity="center">
         <Button
-                android:text="Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/button7"/>
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button7"/>
         <Button
-                android:text="Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/button8"/>
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button8"/>
         <Button
-                android:text="Button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/button9"/>
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button9"/>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:gravity="center">
+        <Button
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button1"/>
+        <Button
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button2"/>
+        <Button
+                android:text="/"
+                android:layout_width="70dp"
+                android:layout_height="70dp" android:id="@+id/button3"/>
     </LinearLayout>
 </FrameLayout>
