--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -4,38 +4,64 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".GameFragment">
+    <CheckBox
+            android:text="PLAYER_HERE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/checkBox"/>
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:gravity="center">
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button7"/>
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button8"/>
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button9"/>
-    </LinearLayout>
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:gravity="center">
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button1"/>
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button2"/>
-        <Button
-                android:text="/"
-                android:layout_width="70dp"
-                android:layout_height="70dp" android:id="@+id/button3"/>
+            android:layout_height="match_parent" android:gravity="center">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:gravity="center">
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button1"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button2"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button3"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:gravity="center">
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button4"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button5"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button6"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:gravity="center">
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button7"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button8"/>
+            <Button
+                    android:text="/"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp" android:id="@+id/button9"/>
+        </LinearLayout>
     </LinearLayout>
 </FrameLayout>
