--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -8,6 +8,10 @@
             android:text="PLAYER_HERE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/checkBox"/>
+    <TextView
+            android:text="00:00"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -19,15 +23,18 @@
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button1"/>
+                    android:layout_height="80dp" android:id="@+id/button1" android:tag="1"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button2"/>
+                    android:layout_height="80dp" android:id="@+id/button2" android:tag="2"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button3"/>
+                    android:layout_height="80dp" android:id="@+id/button3" android:tag="3"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="horizontal"
@@ -36,15 +43,18 @@
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button4"/>
+                    android:layout_height="80dp" android:id="@+id/button4" android:tag="4"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button5"/>
+                    android:layout_height="80dp" android:id="@+id/button5" android:tag="5"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button6"/>
+                    android:layout_height="80dp" android:id="@+id/button6" android:tag="6"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="horizontal"
@@ -53,15 +63,22 @@
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button7"/>
+                    android:layout_height="80dp" android:id="@+id/button7" android:tag="7"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button8"/>
+                    android:layout_height="80dp" android:id="@+id/button8" android:tag="8"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
             <Button
                     android:text="/"
                     android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button9"/>
+                    android:layout_height="80dp" android:id="@+id/button9" android:tag="9"
+                    style="@style/Widget.AppCompat.Button.Borderless"/>
         </LinearLayout>
+        <Button
+                android:text="Reset"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/resetButton"/>
     </LinearLayout>
 </FrameLayout>
