--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -15,21 +15,21 @@
         <TextView
                 android:text="Tic Tac Toe"
                 android:layout_width="match_parent"
-                android:layout_height="53dp" android:id="@+id/textView" android:textStyle="bold"
+                android:layout_height="76dp" android:id="@+id/textView" android:textStyle="bold"
                 android:textSize="28sp" android:textAlignment="center" android:textColor="@android:color/black"/>
         <Button
                 android:text="Play"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="113dp" android:id="@+id/playButton"
                 style="@style/Widget.AppCompat.Button.Colored" android:textSize="24sp" android:textStyle="bold"/>
         <Button
                 android:text="Leaderboard"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/leaderboardButton"
                 style="@style/Widget.AppCompat.Button"/>
         <Button
                 android:text="Rules (?)"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content" android:id="@+id/playButton3"
                 style="@style/Widget.AppCompat.Button.Small"/>
     </LinearLayout>
