--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -4,77 +4,87 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".GameFragment">
-    <CheckBox
-            android:text="PLAYER_HERE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/checkBox"/>
-    <TextView
-            android:text="00:00"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:gravity="center">
+            android:layout_height="match_parent">
         <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:gravity="center">
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button1" android:tag="1"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button2" android:tag="2"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button3" android:tag="3"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
+                android:layout_height="70dp" android:background="@android:color/holo_orange_light">
+            <TextView
+                    android:text="00:00"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"/>
+            <CheckBox
+                    android:text="PLAYER_HERE"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/checkBox"/>
         </LinearLayout>
         <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:gravity="center">
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button4" android:tag="4"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button5" android:tag="5"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button6" android:tag="6"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-        </LinearLayout>
-        <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:gravity="center">
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button7" android:tag="7"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button8" android:tag="8"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
-            <Button
-                    android:text="/"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp" android:id="@+id/button9" android:tag="9"
-                    style="@style/Widget.AppCompat.Button.Borderless"/>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:gravity="center">
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button1" android:tag="1"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button2" android:tag="2"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button3" android:tag="3"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:gravity="center">
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button4" android:tag="4"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button5" android:tag="5"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button6" android:tag="6"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:gravity="center">
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button7" android:tag="7"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button8" android:tag="8"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+                <Button
+                        android:text="/"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp" android:id="@+id/button9" android:tag="9"
+                        style="@style/Widget.AppCompat.Button.Borderless"/>
+            </LinearLayout>
         </LinearLayout>
         <Button
                 android:text="Reset"
