--- a/TicTacToe/app/src/main/res/layout/fragment_start.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_start.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".StartFragment">
-    <LinearLayout
-            android:orientation="vertical"
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
-                android:text="Enter player info"
+
+        <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="30sp"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/playerTextField" android:hint="Name" android:textStyle="bold"
-                android:singleLine="true"/>
-        <Button
-                android:text="Start"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/playButton"/>
-    </LinearLayout>
+                android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="32dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="32dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="32dp">
+            <TextView
+                    android:text="Who's playing?"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="30sp"
+                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/player1TextField" android:hint="Player 1" android:textStyle="bold"
+                    android:singleLine="true"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/player2TextField" android:hint="Player 2" android:textStyle="bold"
+                    android:singleLine="true"/>
+            <Switch
+                    android:text="Switch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/switch1" android:textOn="AI Enabled"
+                    android:textOff="AI Disabled"/>
+            <Button
+                    android:text="Start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/playButton"/>
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </FrameLayout>
