--- a/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
@@ -6,9 +6,15 @@
              tools:context=".LeaderboardFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello, Leaderboards!"/>
+            android:layout_height="match_parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:text="Leaderboards" android:textSize="22sp" android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"/>
+    </LinearLayout>
 
 </FrameLayout>
