--- a/TicTacToe/app/src/main/res/layout/fragment_start.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_start.xml
@@ -6,7 +6,7 @@
              tools:context=".StartFragment">
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:background="@color/lightGrayBackground">
 
         <LinearLayout
                 android:orientation="vertical"
@@ -14,13 +14,14 @@
                 android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="32dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="32dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="32dp">
+                android:layout_marginTop="128dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="128dp" android:padding="24dp" android:background="@android:color/white">
             <TextView
-                    android:text="Who's playing?"
+                    android:text="PLAYERS"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="30sp"
-                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"/>
+                    android:textColor="@color/colorPrimaryDark" android:textStyle="bold"
+                    android:layout_marginBottom="16dp"/>
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -36,14 +37,15 @@
                     android:id="@+id/player2TextField" android:hint="Player 2" android:textStyle="bold"
                     android:singleLine="true"/>
             <Switch
-                    android:text="Switch"
+                    android:text="Against AI"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/switch1" android:textOn="AI Enabled"
                     android:textOff="AI Disabled"/>
             <Button
                     android:text="Start"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/playButton"/>
+                    android:layout_height="wrap_content" android:id="@+id/playButton" android:layout_marginTop="16dp"
+                    style="@style/Widget.AppCompat.Button.Colored" android:textStyle="bold"/>
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
