--- a/TicTacToe/app/src/main/res/values/colors.xml
+++ b/TicTacToe/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="lightGrayBackground">#E9E9E9</color>
 </resources>
