--- a/TicTacToe/app/src/main/res/navigation/nav_graph.xml
+++ b/TicTacToe/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,8 @@
               android:label="fragment_game" tools:layout="@layout/fragment_game"/>
     <fragment android:id="@+id/startFragment" android:name="no.jahnsrud.tictactoe.StartFragment"
               android:label="fragment_start" tools:layout="@layout/fragment_start">
-        <action android:id="@+id/action_startFragment_to_gameFragment" app:destination="@id/gameFragment"/>
+        <action android:id="@+id/action_startFragment_to_gameFragment" app:destination="@id/gameFragment"
+                app:enterAnim="@anim/fade_in" app:popEnterAnim="@anim/fade_in"/>
     </fragment>
     <fragment android:id="@+id/leaderboardFragment" android:name="no.jahnsrud.tictactoe.LeaderboardFragment"
               android:label="fragment_leaderboard" tools:layout="@layout/fragment_leaderboard"/>
