--- a/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
@@ -7,7 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         <TextView
@@ -15,6 +15,9 @@
                 android:layout_height="42dp"
                 android:text="Leaderboards" android:textSize="22sp" android:textStyle="bold"
                 android:textColor="@color/colorPrimaryDark"/>
+        <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
     </LinearLayout>
 
 </FrameLayout>
