--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -18,10 +18,11 @@
                     android:layout_height="wrap_content" android:id="@+id/currentPlayerTextField"
                     android:textAlignment="center" android:textColor="@color/colorPrimaryDark"
                     android:textStyle="bold" android:textSize="18sp"/>
-            <TextView
-                    android:text="00:00"
+            <Chronometer
+                    android:id="@+id/timer"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textAlignment="center"/>
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center" />
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
@@ -109,6 +110,7 @@
                     android:text="Restart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/resetButton"/>
+
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
