--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -11,7 +11,7 @@
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="70dp" android:background="@android:color/holo_orange_light">
+                android:layout_height="70dp" android:background="@color/lightGrayBackground">
             <TextView
                     android:text="CURRENT_PLAYER"
                     android:layout_width="match_parent"
@@ -22,32 +22,32 @@
                     android:id="@+id/timer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:gravity="center">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_gravity="center">
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:gravity="center">
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button1" android:tag="1"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button1" android:tag="1"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button2" android:tag="2"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button2" android:tag="2"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button3" android:tag="3"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button3" android:tag="3"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
@@ -57,20 +57,20 @@
                     android:layout_height="wrap_content" android:gravity="center">
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button4" android:tag="4"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button4" android:tag="4"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button5" android:tag="5"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button5" android:tag="5"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button6" android:tag="6"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button6" android:tag="6"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
@@ -80,20 +80,20 @@
                     android:layout_height="wrap_content" android:gravity="center">
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button7" android:tag="7"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button7" android:tag="7"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button8" android:tag="8"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button8" android:tag="8"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
                 <Button
                         android:text="/"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp" android:id="@+id/button9" android:tag="9"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp" android:id="@+id/button9" android:tag="9"
                         style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                         android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
