--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -11,8 +11,8 @@
         <TextView
                 android:text="super tic tac"
                 android:layout_width="match_parent"
-                android:layout_height="104dp" android:id="@+id/textView" android:textStyle="bold"
-                android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
+                android:layout_height="106dp" android:id="@+id/textView" android:textStyle="bold"
+                android:textSize="26sp" android:textAlignment="center" android:textColor="@android:color/black"
                 android:gravity="center" android:fontFamily="@font/super_mario_font" android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"/>
         <LinearLayout
@@ -23,13 +23,13 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:background="@color/onePlayerBackground"
-                    android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player1Box"
+                    android:layout_marginBottom="10dp" android:gravity="center" android:id="@+id/player1Box"
                     android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
                         android:src="@drawable/player_mario"
                         android:layout_width="56dp"
                         android:layout_height="75dp" android:id="@+id/imageView"
-                        android:background="@drawable/player_mario" android:scaleType="centerInside"/>
+                        android:scaleType="centerInside"/>
                 <Space
                         android:layout_width="match_parent"
                         android:layout_height="13dp"/>
@@ -53,10 +53,10 @@
                     android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player2Box"
                     android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
-                        android:src="@drawable/player_mario"
+                        android:src="@drawable/player_luigi"
                         android:layout_width="56dp"
                         android:layout_height="75dp" android:id="@+id/imageView"
-                        android:background="@drawable/player_luigi" android:scaleType="centerInside"/>
+                        android:scaleType="centerInside"/>
                 <Space
                         android:layout_width="match_parent"
                         android:layout_height="13dp"/>
