--- a/TicTacToe/app/src/main/res/drawable/rounded_background.xml
+++ b/TicTacToe/app/src/main/res/drawable/rounded_background.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffffff"/>
+    <solid android:color="#3C3C3C"/>
 
-    <stroke android:width="3dp"
-            android:color="#ff000000"
-    />
+
 
     <padding android:left="1dp"
              android:top="1dp"
